package eapli.base.gestaoservicoshelpdesk.repositories;

import eapli.base.gestaoservicoshelpdesk.domain.Criticidade;
import eapli.framework.domain.repositories.DomainRepository;

public interface CriticidadeRepository extends DomainRepository<Long, Criticidade> {

}
